/*
 * $Id: ChangeLog,v 1.3433 2004/09/14 12:26:07 srobert Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-09-14 22:10 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/Makefile
  * xharbour/make_tgz.sh
  * xharbour/bin/hb-func.sh
  * xharbour/bin/postinst.sh
  * xharbour/config/bsd/global.cf
  * xharbour/config/darwin/global.cf
  * xharbour/config/linux/global.cf
    + added some new envvars for custom build
    + added HB_COMMERCE envvar - when set to yes then the libraries
      with pure GPL (or similar) licence will be excluded from the build
      final binaries (slang, gpm) - it's for people who easy want to make
      xHarbour for application released with non GPL compliant license

  * xharbour/xharbour.spec
    * mark /etc/harbour.cfg and /etc/harbour/hb-charmap.def
      as configure files and disable checking md5 or mtime
    + added --without gtsln switch
    + added support for HB_COMMERCE

  * xharbour/contrib/libnf/proper.c
    * build FT_PROPER for all platforms not only DOS/Windows

2004-09-14 08:19 UTC-0500 Sylvain Robert <s.robert/at/videotron.ca>
  * xharbour/source/tip/client.prg
    ! Fix method ReadToFile() now work properly when file to retrieve is
      less than 1024

2004-09-13 19:51 UTC+0100 Patrick Mast <patrick@xHarbour.com>
  * xharbour/source/tip/client.prg
    ! fix to read files smaller tahn 1024 byte.
      Fix provided by Sylvain Robert.

2004-09-13 19:25 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
  * xharbour/config/w32/mingw32.cf
  * xharbour/config/w32/watcom.cf
    * added search for mapi32 lib
  * xharbour/source/rtl/gtwvt/gtwvt.c
    * removed #ifdef __WATCOMC__ I added 2004-09-09 13:45

2004-09-13 10:30 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gtwvt/wvtutils.c
  * source/rtl/gtwvt/gtwvt.c
    * casts
